Initialize IMPOSSIBLE once rather than in every constructor call